extends AnimatedSprite


# Declare member variables here. Examples:
# var a = 2
# var b = "text"


# Called when the node enters the scene tree for the first time.
func _ready():
	play("default")


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_enter_body_entered(body):
	pass # Replace with function body.


func _on_enter3_body_entered(body):
	pass # Replace with function body.


func _on_enter3_body_exited(body):
	pass # Replace with function body.
